Add 'Kantyczka z lotu ptaka'

--- a/src/index.tex
+++ b/src/index.tex
@@ -74,4 +74,97 @@ Biegnij \\
 
 \end{song}
 
+
+\begin{song}{title={Kantyczka z lotu ptaka}, band="Jacek Kaczmarski", tags={polskie}}
+
+\begin{verse}
+^{a}Patrz mój dobrotliwy Boże \\
+^{C}Na swój ulubiony ludek, \\
+^{G}Jak wychodzi rano w zboże \\
+^{E7}Zginać harde karki z trudem. \\
+^{a}Patrz, jak schyla się nad pracą, \\
+^{C}Jak pokornie klęski znosi \\
+^{G}I nie pyta - Po co? Za co? \\
+^{E7}Czasem o coś Cię poprosi \\
+^{E7}Czasem o coś Cię poprosi \\
+\end{verse}
+
+\begin{verse}
+- Ujmij ^{a}trochę ^{E7}łaski ^{a}nieba! \\
+Daj ^{C}spokoju w zamian, ^{G}chleba! \\
+Innym ^{E7}udziel swej ^{a}miłości! \\
+^{F}Nam - sprawiedli^{a}wo^{E7}ści! \\
+\end{verse}
+
+\begin{verse}
+- Smuć się Chryste Panie w chmurze \\
+Widząc jak się naród bawi, \\
+Znowu chciałby być przedmurzem \\
+I w pogańskiej krwi się pławić. \\
+Dymią kuźnie i warsztaty, \\
+Lecz nie pracą a - skargami, \\
+Że nie taka jak przed laty \\
+Łaska Twoja nad hufcami: \\
+\end{verse}
+
+\begin{verse}
+- Siły grożą Ci nieczyste \\
+Daj nam wsławić się o Chryste! \\
+Kalwin, Litwin nam ubliża! \\
+Dźwigniem ciężar Krzyża! \\
+\end{verse}
+
+\begin{verse}
+- Załam ręce Matko Boska; \\
+Upadają obyczaje, \\
+Nie pomogła modłom chłosta - \\
+Młodzież w szranki ciała staje. \\
+W nędzy gzi się krew gorąca \\
+Bez sumienia, bez oddechu, \\
+Po czym z własnych trzewi strząsa \\
+Niedojrzały owoc grzechu. \\
+\end{verse}
+
+\begin{verse}
+- Co zbawienie nam, czy piekło! \\
+Byle życie nie uciekło! \\
+Jeszcze będzie czas umierać! \\
+Żyjmy tu i teraz! \\
+\end{verse}
+
+\begin{verse}
+- Grzmijcie gniewem Wszyscy Święci! \\
+Handel lud zalewa boży, \\
+Obce kupce i klienci \\
+W złote wabią go obroże. \\
+Liczy chciwy Żyd i Niemiec \\
+Dziś po ile polska czystość; \\
+Kupi dusze, kupi ziemie \\
+I zostawi pośmiewisko...(3x) \\
+\end{verse}
+
+\begin{verse}
+- Co nam hańba, gdy talary \\
+Mają lepszy kurs od wiary! \\
+Wymienimy na walutę \\
+Honor i pokutę!(2x) \\
+\end{verse}
+
+\begin{verse}
+- Jeden naród, tyle kwestii!
+Wszystkich na raz - nie wysłuchasz! -
+Zadumali się Niebiescy
+W imię Ojca, Syna, Ducha...(3x)
+\end{verse}
+
+\begin{verse}
+- Co nam hańba, gdy talary \\
+Mają lepszy kurs od wiary! \\
+Wymienimy na walutę \\
+Honor i pokutę!(2x) \\
+\end{verse}
+
+\end{song}
+
+
 \end{document}
